added the display of user pages with all the data, improved the project structure

--- a/app/src/main/res/layout/fragment_people.xml
+++ b/app/src/main/res/layout/fragment_people.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context="com.emil.linksy.presentation.ui.PeopleFragment">
+    tools:context="com.emil.linksy.presentation.ui.navigation.people.PeopleFragment">
 
 
 
