--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.emil.linksy.presentation.ui.AuthActivity">
+    tools:context="com.emil.linksy.presentation.ui.auth.AuthActivity">
 
     <FrameLayout
         android:id="@+id/fl_fragment_container_auth"
