--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.emil.linksy.presentation.ui.FeedFragment">
+    tools:context="com.emil.linksy.presentation.ui.navigation.feed.FeedFragment">
 
 
     <com.google.android.material.appbar.MaterialToolbar
