--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context="com.emil.linksy.presentation.ui.LoginFragment">
+    tools:context="com.emil.linksy.presentation.ui.auth.LoginFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:layout_width="match_parent"
