--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context="com.emil.linksy.presentation.ui.PostFragment">
+    tools:context="com.emil.linksy.presentation.ui.navigation.profile.PostFragment">
 
 
     <EditText
