--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context="com.emil.linksy.presentation.ui.ProfileFragment">
+    tools:context="com.emil.linksy.presentation.ui.navigation.profile.ProfileFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:layout_width="match_parent"
