--- a/app/src/main/res/layout/fragment_search_people.xml
+++ b/app/src/main/res/layout/fragment_search_people.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.emil.linksy.presentation.ui.PeopleFragment">
+    tools:context="com.emil.linksy.presentation.ui.navigation.people.PeopleFragment">
 
 
 
