--- a/app/src/main/res/layout/fragment_subscriptions.xml
+++ b/app/src/main/res/layout/fragment_subscriptions.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.emil.linksy.presentation.ui.SubscriptionsFragment">
+    tools:context="com.emil.linksy.presentation.ui.navigation.people.SubscriptionsFragment">
 
 
 
