--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,7 +21,7 @@
     <color name="tabSelectedTextColor">#000000</color>
     <color name="tabTextColor">#BABABA</color>
     <color name="tabIndicatorColor_2">#115278</color>
-
+    <color name="tabIndicatorColor_3">#03A9F4</color>
     <color name="shimmerBackground">#9F9F9F</color>
     <color name="shimmerHighlight">#66C5C5C5</color>
     <color name="newPost_button">#084F70</color>
