--- a/app/src/main/res/layout/fragment_subscribers.xml
+++ b/app/src/main/res/layout/fragment_subscribers.xml
@@ -4,6 +4,12 @@
     android:layout_height="match_parent"
     tools:context="com.emil.linksy.presentation.ui.navigation.people.SubscribersFragment">
 
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_users"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="15dp"
+        >
+    </androidx.recyclerview.widget.RecyclerView>
 
 </FrameLayout>
