I have configured the display of chats and messages, and added navigation to pages from the MessagesActivity toolbar.Added message storage in the local application database.

--- a/app/src/main/res/layout/rv_item_chat.xml
+++ b/app/src/main/res/layout/rv_item_chat.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/ll_user"
+    android:id="@+id/ll_chat"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="5dp"
@@ -24,7 +24,7 @@
         android:orientation="vertical">
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_nave"
+            android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
