--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -49,4 +49,5 @@
     <color name="blue">#3F51B5</color>
     <color name="purple">#9C27B0</color>
     <color name="moment_progress">#C5471F</color>
+    <color name="user_message">#A7CFEF</color>
 </resources>
