--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -32,7 +32,10 @@
 
 
 
-
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_title"
@@ -40,12 +43,29 @@
             android:layout_height="wrap_content"
             android:textSize="15sp"
             android:textStyle="bold"
-            android:layout_marginStart="25dp"
+            android:layout_marginStart="5dp"
             android:textColor="@color/dark_gray"
             android:text="name">
 
         </com.google.android.material.textview.MaterialTextView>
 
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/tv_member_count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        android:fontFamily="@font/klukva"
+        android:layout_marginStart="10dp"
+        android:visibility="gone"
+        android:textColor="@color/gray"
+        android:text="">
+
+    </com.google.android.material.textview.MaterialTextView>
+
+
+
+</LinearLayout>
 
 
     </com.google.android.material.appbar.MaterialToolbar>
