--- a/app/src/main/res/layout/rv_item_user.xml
+++ b/app/src/main/res/layout/rv_item_user.xml
@@ -8,48 +8,45 @@
     android:foreground="?attr/selectableItemBackground"
     android:orientation="horizontal">
 
-
-
-
-
     <ImageView
         android:id="@+id/iv_user_avatar"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="@drawable/default_avatar">
-    </ImageView>
+        android:background="@drawable/default_avatar" />
 
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_gravity="center"
+        android:layout_weight="1"
         android:orientation="vertical">
 
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/tv_username"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="15sp"
-        android:textColor="@color/dark_gray"
-        android:text="">
-    </com.google.android.material.textview.MaterialTextView>
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textSize="15sp"
+            android:textColor="@color/dark_gray"
+            android:text="username" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_link"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:text=""
             android:visibility="gone"
             android:textColor="@color/link"
             android:fontFamily="@font/klukva"
             android:textSize="15sp"
-            android:textStyle="bold">
-        </com.google.android.material.textview.MaterialTextView>
-
-
+            android:textStyle="bold" />
     </LinearLayout>
+
+    <RadioButton
+        android:id="@+id/rb_selector"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_gravity="center_vertical" />
 </LinearLayout>
