--- a/app/src/main/res/layout/rv_item_message.xml
+++ b/app/src/main/res/layout/rv_item_message.xml
@@ -4,7 +4,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_marginBottom="3dp"
     android:layout_marginHorizontal="3dp"
     android:layout_height="wrap_content">
 
@@ -183,6 +182,7 @@
                             android:padding="2dp"
                             android:textSize="20sp"
                             android:maxEms="15"
+                            android:textIsSelectable="true"
                        android:text=""
                             android:fontFamily="@font/klukva">
                         </TextView>
@@ -195,7 +195,6 @@
                         android:textSize="12sp"
                         android:textStyle="bold"
                         android:padding="5dp"
-                        android:visibility="gone"
                         android:layout_gravity="bottom|end"
                         android:text="00:00">
 
