--- a/app/src/main/res/layout/rv_item_user.xml
+++ b/app/src/main/res/layout/rv_item_user.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="5dp"
+    android:layout_marginBottom="5dp"
     android:foreground="?attr/selectableItemBackground"
     android:orientation="horizontal">
 
