--- a/app/src/main/res/layout/activity_user_page.xml
+++ b/app/src/main/res/layout/activity_user_page.xml
@@ -24,27 +24,37 @@
             android:textSize="15sp"
             android:textStyle="bold"
             android:textColor="@color/link"
+            android:visibility="gone"
             android:text="link">
 
         </com.google.android.material.textview.MaterialTextView>
 
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:layout_marginBottom="10dp"
+            android:text="username">
+
+        </com.google.android.material.textview.MaterialTextView>
 
 
     </com.google.android.material.appbar.MaterialToolbar>
 
+    <ImageButton
+        android:id="@+id/ib_qr"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginVertical="10dp"
+        android:background="@drawable/ic_qr"
+        android:layout_gravity="center">
 
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/tv_username"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textColor="@color/black"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        android:layout_marginBottom="10dp"
-        android:text="username">
+    </ImageButton>
 
-    </com.google.android.material.textview.MaterialTextView>
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/tv_birthday"
@@ -59,13 +69,18 @@
 
     </com.google.android.material.textview.MaterialTextView>
 
+
+
     <ImageView
         android:id="@+id/iv_user_avatar"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_gravity="center"
         android:src="@drawable/default_avatar"
-        android:layout_gravity="center_horizontal">
+       >
     </ImageView>
+
+
 
 
 
