added the ability to add polls to channel posts.I have configured the display of private and public channels.Created UseCases for actions inside channels

--- a/app/src/main/res/layout/activity_channel_page.xml
+++ b/app/src/main/res/layout/activity_channel_page.xml
@@ -187,7 +187,7 @@
 
     </LinearLayout>
     <LinearLayout
-        android:id="@+id/ll_subscriptions"
+        android:id="@+id/ll_subscribers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/rounded_layout"
