--- a/app/src/main/res/layout/delete_button.xml
+++ b/app/src/main/res/layout/delete_button.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ImageButton android:id="@+id/ib_delete_picture"
+<ImageButton android:id="@+id/ib_delete"
     android:layout_width="25dp"
     android:layout_height="25dp"
     android:foreground="?attr/selectableItemBackground"
