--- a/app/src/main/res/layout/rv_item_user.xml
+++ b/app/src/main/res/layout/rv_item_user.xml
@@ -44,8 +44,8 @@
             android:textStyle="bold" />
     </LinearLayout>
 
-    <RadioButton
-        android:id="@+id/rb_selector"
+    <CheckBox
+        android:id="@+id/сb_selector"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
