--- a/app/src/main/res/layout/rv_item_options.xml
+++ b/app/src/main/res/layout/rv_item_options.xml
@@ -1,27 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ll_main"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:padding="8dp">
+    android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/et_option"
-        android:layout_width="0dp"
+
+
+    <TextView
+        android:id="@+id/tv_option"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:padding="8dp"
-        android:background="@drawable/rounded_edit_text"
-        android:inputType="text"
-        android:imeOptions="actionDone"
-        android:textSize="16sp" />
+        android:layout_gravity="center"
+        android:textStyle="bold"
+        android:fontFamily="@font/klukva"
+        android:textSize="30sp"
+        android:text="------------">
 
-    <ImageButton
-        android:id="@+id/iv_delete"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="8dp"
-        android:layout_gravity="center_vertical"
-        android:src="@drawable/ic_delete" />
+    </TextView>
+
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+    <ProgressBar
+        android:id="@+id/pb_option"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="50dp"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal">
+    </ProgressBar>
+
+    <TextView
+        android:id="@+id/tv_option_count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textStyle="bold"
+        android:visibility="gone"
+        android:fontFamily="@font/klukva"
+        android:textSize="30sp"
+        android:text="">
+
+    </TextView>
+</LinearLayout>
+
 </LinearLayout>
