--- a/app/src/main/res/layout/activity_channel_page.xml
+++ b/app/src/main/res/layout/activity_channel_page.xml
@@ -117,6 +117,7 @@
         style="@style/ButtonProfile"
         android:textStyle="bold"
         app:backgroundTint="@color/colorPrimary"
+        android:visibility="gone"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/tv_description"
         app:layout_constraintStart_toStartOf="parent"
@@ -225,6 +226,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_layout"
             android:layout_gravity="center"
+            android:visibility="gone"
             android:layout_marginLeft="10dp"
             android:padding="10dp"
             android:orientation="vertical">
@@ -233,7 +235,7 @@
             <com.google.android.material.textview.MaterialTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="subscription \nrequest"
+                android:text="@string/subscription_request"
                 android:textStyle="bold"
                 android:gravity="center"
                 android:fontFamily="@font/klukva"
@@ -242,7 +244,7 @@
 
             </com.google.android.material.textview.MaterialTextView>
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/tv_subscriber"
+                android:id="@+id/tv_requests"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="0"
