--- a/app/src/main/res/layout/rv_item_user.xml
+++ b/app/src/main/res/layout/rv_item_user.xml
@@ -36,7 +36,7 @@
             android:id="@+id/tv_link"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=""
+            android:text="аааааааа"
             android:visibility="gone"
             android:textColor="@color/link"
             android:fontFamily="@font/klukva"
@@ -44,10 +44,39 @@
             android:textStyle="bold" />
     </LinearLayout>
 
+
+    <ImageButton
+        android:id="@+id/ib_reject"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/ic_reject"
+        android:layout_marginEnd="20dp"
+        android:visibility="gone"
+        android:layout_gravity="center">
+
+    </ImageButton>
+
+
+    <ImageButton
+        android:id="@+id/ib_accept"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/ic_accept"
+        android:visibility="gone"
+        android:layout_marginEnd="20dp"
+        android:layout_gravity="center">
+
+    </ImageButton>
+
+
     <CheckBox
         android:id="@+id/сb_selector"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
         android:layout_gravity="center_vertical" />
+
+
+
+
 </LinearLayout>
