--- a/app/src/main/res/layout/add_poll_dialog.xml
+++ b/app/src/main/res/layout/add_poll_dialog.xml
@@ -18,13 +18,13 @@
 
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_username"
+            android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="15sp"
             android:textColor="@color/black"
             android:textStyle="bold"
-            android:text="Опрос">
+            android:text="@string/poll">
 
         </com.google.android.material.textview.MaterialTextView>
 
@@ -76,7 +76,9 @@
         android:id="@+id/bt_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="добавить"
+        android:text="@string/add"
+        android:fontFamily="@font/klukva"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rv_options">
