--- a/app/src/main/res/layout/activity_channel_page.xml
+++ b/app/src/main/res/layout/activity_channel_page.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context="com.emil.linksy.presentation.ui.page.ChannelPageActivity">
 
     <ImageButton
@@ -102,7 +103,9 @@
         android:textStyle="bold"
         app:backgroundTint="@color/gray"
        android:layout_marginTop="10dp"
+
         app:layout_constraintTop_toBottomOf="@id/tv_description"
+        app:layout_constraintBottom_toTopOf="@id/stroke_top"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:text="@string/subscribe">
@@ -116,11 +119,12 @@
         android:layout_height="wrap_content"
         style="@style/ButtonProfile"
         android:textStyle="bold"
-        app:backgroundTint="@color/colorPrimary"
         android:visibility="gone"
+        app:backgroundTint="@color/colorPrimary"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/tv_description"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/stroke_top"
         app:layout_constraintEnd_toEndOf="parent"
         android:text="@string/submit_request">
     </com.google.android.material.button.MaterialButton>
@@ -130,7 +134,7 @@
         android:layout_height="1dp"
         android:alpha="0.1"
         android:background="@color/black"
-        app:layout_constraintTop_toBottomOf="@id/bt_sub"
+        app:layout_constraintTop_toBottomOf="@id/bt_submit"
         android:layout_marginTop="10dp"
         />
 
