--- a/app/src/main/res/layout/fragment_channel.xml
+++ b/app/src/main/res/layout/fragment_channel.xml
@@ -70,11 +70,27 @@
         </LinearLayout>
     </LinearLayout>
 
+
+
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/tv_search_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/klukva"
+        android:layout_marginTop="10dp"
+        android:textSize="20sp"
+        android:visibility="gone"
+        android:textStyle="bold"
+        android:text="@string/search_results">
+
+    </com.google.android.material.textview.MaterialTextView>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_channels"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         >
     </androidx.recyclerview.widget.RecyclerView>
 </LinearLayout>
