--- a/app/src/main/res/drawable/dialog_stick.xml
+++ b/app/src/main/res/drawable/dialog_stick.xml
@@ -1,9 +1,11 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="400dp"
-    android:height="200dp"
-    android:viewportWidth="400"
-    android:viewportHeight="200">
-  <path
-      android:pathData="M5,9h390v181h-390z"
-      android:fillColor="#555"/>
-</vector>
+<?xml version="1.0" encoding="utf-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+  <corners android:radius="20dp" />
+  <solid android:color="@color/light_gray"
+      />
+  <stroke
+      android:width="1dp"
+      android:color="@color/soft_gray"
+      />
+</shape>
