--- a/app/src/main/res/layout/fragment_channel.xml
+++ b/app/src/main/res/layout/fragment_channel.xml
@@ -79,8 +79,10 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/klukva"
         android:layout_marginTop="10dp"
-        android:textSize="20sp"
+        android:layout_marginStart="10dp"
+        android:textColor="@color/gray"
         android:visibility="gone"
+        android:textSize="20sp"
         android:textStyle="bold"
         android:text="@string/search_results">
 
