--- a/app/src/main/res/layout/rv_item_posts.xml
+++ b/app/src/main/res/layout/rv_item_posts.xml
@@ -219,6 +219,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/iv_comment"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_gravity="center_horizontal"
@@ -276,7 +277,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/iv_like"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_gravity="center_horizontal"
